# rust-leptos-ecommerce

./: Cargo.toml  README.md
public/: styles.css
src/: lib.rs  main.rs
src/components/: contact_btn.rs  home_btn.rs  mod.rs  nav_bar_comp.rs  product_btn.rs  sign_in_btn.rs  sign_up_btn.rs
src/pages/: about.rs  contact.rs  home.rs  mod.rs  product.rs  sign_in_page.rs  sign_up_page.rs
