[package]
name = "rust-front-end-5-leptos"
version = "0.1.0"
edition = "2021"
authors = ["HarshaanNiles010 <harshaanniles010@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0.215", features = ["derive"]}
surrealdb = {version = "2.1.0", optional = true}
uuid = "1.11.0"
charts-rs = "0.3.19"
validator = {version = "0.19.0", features=["derive"]}
cfg-if = "1.0.0"
once_cell = "1.20.2"
chrono = "0.4.38"
num-format = "0.4.4"
thiserror = "2.0.3"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
